@@ -67,7 +67,7 @@
                     </td>
                     <td align="right">
                         <span align="right" data-im="item@amount_calc"
-                              data-im-format="number(2)"></span>
+                              data-im-format="number()"></span>
                     </td>
                     <td></td>
                 </tr>
